force-app/main/default/objects/UWMSettings__c/UWMSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings allow to disable conditions run, insights run and etc</description>
    <label>UWM Settings</label>
</CustomObject>