force-app/main/default/objects/UWMSettings__c/fields/CanConditionsQueueRun__c.field-meta.xml
<CustomField>
    <fullName>CanConditionsQueueRun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CanConditionsQueueRun</label>
    <type>Checkbox</type>
</CustomField>