force-app/main/default/objects/UWMSettings__c/fields/CanInsightsQueueRun__c.field-meta.xml
<CustomField>
    <fullName>CanInsightsQueueRun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CanInsightsQueueRun</label>
    <type>Checkbox</type>
</CustomField>