force-app/main/default/objects/UWMSettings__c/fields/Conditions_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Conditions_Batch_Size__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Conditions Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>