force-app/main/default/objects/UWMSettings__c/fields/Default_Condition_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Condition_Name__c</fullName>
    <defaultValue>TRIM(&apos;No Description Available - Please Update Manually&apos;)</defaultValue>
    <description>Default Condition Name for Loan Condition</description>
    <label>Default Condition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>