force-app/main/default/objects/UWMSettings__c/fields/Emails_For_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Emails_For_Notifications__c</fullName>
    <description>List of comma-separated email addresses to send notifications to</description>
    <label>Emails For Notifications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>