force-app/main/default/objects/UWMSettings__c/fields/Insights_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Insights_Batch_Size__c</fullName>
    <defaultValue>25</defaultValue>
    <label>Insights Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>