force-app/main/default/objects/UWMSettings__c/fields/Moved_To_UW_Approved_Starting_Date__c.field-meta.xml
<CustomField>
    <fullName>Moved_To_UW_Approved_Starting_Date__c</fullName>
    <description>Used to fetch only loans that have Moved To UW Approved &gt; Starting Date specified here</description>
    <label>Moved To UW Approved Starting Date</label>
    <type>Date</type>
</CustomField>